--- a/donate.html
+++ b/donate.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate to Wamdo</title>
-    <link rel="icon" href="/website/images/favicon.ico" type="image/x-icon">  
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">  
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link rel="stylesheet" href="styles.css">
-    <script src="/website/js/layout.js"></script>
+    <script src="/js/layout.js"></script>
 
      
 </head>
