Fixed spacing issues

--- a/about.html
+++ b/about.html
@@ -15,11 +15,18 @@
 <body>
     <header><div id="navbar"></div></header>
 
-    <section class="closed-container">
-        <h2>About Wamdo</h2>
-        <p>Wamdo strives to provide trustworthy tech solutions without hidden catches. Our current and future open-source digital and physical products and services are designed with transparency, reliability, and user-centric performance in mind.</p>
-        <p>We imagine a future where personal technology is understandable, dependable, and genuinely serves its users. Wamdo aims to build tools people can trust, tools that stay out of the way, respect privacy, and remain open for anyone to inspect.</p>
-    </section>
+    <div class="closed-container">
+        <h1>Coming soon</h1>
+        <p>
+        This page is still being worked on. We'd rather ship it right than ship it fast.
+        </p>
+
+        <p class="muted">
+        Check back later — or follow us for updates.
+        </p>
+
+        <a href="index.html" class="btn-primary">Go back home</a>
+    </div>
 
     <div id="footer"></div>
 </body>
