--- a/donate.html
+++ b/donate.html
@@ -15,10 +15,18 @@
 <body>
     <header><div id="navbar"></div></header>
     
-    <section class="closed-container">
-        <h2>Donations</h2>
-        <p>Donations are not currently accepted. Please check back later.</p>
-    </section>
+    <div class="closed-container">
+        <h1>Coming soon</h1>
+        <p>
+        This page is still being worked on. We'd rather ship it right than ship it fast.
+        </p>
+
+        <p class="muted">
+        Check back later — or follow us for updates.
+        </p>
+
+        <a href="index.html" class="btn-primary">Go back home</a>
+    </div>
         
     <div id="footer"></div>
 </body>
