--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </section>
 
     <section class="content-section section-muted">
-        <div class="container2">
+        <div class="container">
             <h2>A brief view of our mission</h2>
             <p> Wamdo strives to provide trustworthy tech solutions without hidden catches. Our current and future open-source digital and physical products and services are designed with transparency, reliability, and user-centric performance in mind.
             </p>
@@ -49,7 +49,7 @@
     </section>
 
     <section class="content-section">
-        <div class="container2">
+        <div class="container">
             <h2>Our apps:</h2>
             <p>Our <strong>future</strong> app line up will consist of simple utility apps that will be lightweight and efficient, and will be available for free on multiple online stores. As of right now, Wamdo has no apps available.
             </p>
