--- a/products.html
+++ b/products.html
@@ -15,10 +15,18 @@
 <body>
     <header><div id="navbar"></div></header>
     
-    <section class="closed-container">
-        <h2>Our Products page is currently under construction.</h2>
-        <p>Our current selection of apps is under development. Please check back later for updates on our product offerings.</p>
-    </section>
+    <div class="closed-container">
+        <h1>Coming soon</h1>
+        <p>
+        This page is still being worked on. We'd rather ship it right than ship it fast.
+        </p>
+
+        <p class="muted">
+        Check back later — or follow us for updates.
+        </p>
+
+        <a href="index.html" class="btn-primary">Go back home</a>
+    </div>
 
     <div id="footer"></div>
 </body>
