--- a/blog.html
+++ b/blog.html
@@ -15,10 +15,19 @@
 <body>
     <div id="navbar"></div>
 
-    <section class="closed-container">
-        <h2>Our blog</h2>
-        <p>Our blog page is still under construction</p>
-    </section>
+    <div class="closed-container">
+        <h1>Coming soon</h1>
+        <p>
+        This page is still being worked on. We'd rather ship it right than ship it fast.
+        </p>
+
+        <p class="muted">
+        Check back later — or follow us for updates.
+        </p>
+
+        <a href="index.html" class="btn-primary">Go back home</a>
+    </div>
+
 
     <div id="footer"></div>
 </body>
