fixed link in README, fixed theme toggle issue, added --text-contrast, roll down animation for hamburger menu

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         <div class="container">
         <h2>Contact us</h2>
         <p>Find more from us!</p>
-        <!--Most of these accounts are not active, so don't expect to find much haha-->
+        <!--Most of these accounts are not active, so don't expect to find much haha--> 
+        <!--Also, my name is not Enrique Hernandez, that is a placeholder nickname...-->>
             <ul class="social-links">
                 <li><a href="https://www.youtube.com/@GetWamdo">YouTube</a></li>
                 <li><a href="https://www.tiktok.com/@getwamdo">TikTok</a></li>
