Removed: random simbol on the homepage. Adjusted: vision and mission segment alignments, navbar size, most border radiuses and the theme toggle button.

--- a/index.html
+++ b/index.html
@@ -30,21 +30,17 @@
     </section>
 
     <section class="content-section section-muted">
-        <div class="container">
-            <h2>A brief view of our mission</h2>
-            <p> Wamdo strives to provide trustworthy tech solutions without hidden catches. Our current and future open-source digital and physical products and services are designed with transparency, reliability, and user-centric performance in mind.
-            </p>
-        </div>
-    </section>
-
-    <section class="content-section section-muted">
-        <div class="container">
-            <h2>Our vision</h2>
-            <p>
-            We imagine a future where personal technology is understandable, dependable,
-            and genuinely serves its users. Wamdo aims to build tools people can trust,
-            tools that stay out of the way, respect privacy, and remain open for anyone to inspect.
-            </p>
+        <div class="container title-description">
+            <div>
+                <h2>Our vision</h2>
+                <p>We imagine a future where personal technology is understandable, dependable, and genuinely serves its users. Wamdo aims to build tools people can trust, tools that stay out of the way, respect privacy, and remain open for anyone to inspect.
+                </p>
+            </div>
+            <div>
+                <h2>Our mission</h2>
+                <p>Wamdo strives to provide trustworthy tech solutions without hidden catches. Our current and future open-source digital and physical products and services are designed with transparency, reliability, and user-centric performance in mind.
+                </p>
+            </div>
         </div>
     </section>
 
@@ -61,7 +57,7 @@
         <h2>Contact us</h2>
         <p>Find more from us!</p>
         <!--Most of these accounts are not active, so don't expect to find much haha--> 
-        <!--Also, my name is not Enrique Hernandez, that is a placeholder nickname...-->>
+        <!--Also, my name is not Enrique Hernandez, that is a placeholder nickname...-->
             <ul class="social-links">
                 <li><a href="https://www.youtube.com/@GetWamdo">YouTube</a></li>
                 <li><a href="https://www.tiktok.com/@getwamdo">TikTok</a></li>
